--- a/n/n-/n-a/n-able.com.html
+++ b/n/n-/n-a/n-able.com.html
@@ -1,13 +1,13 @@
-<!--The following is the downloaded HTML source of the n-able.com privacy policy that was archived on 2005-12-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051208050954id_/http%3A//www.n-able.com/legal/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the n-able.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615030203id_/http%3A//n-able.com/legal/privacy.php) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en" dir="ltr"><!-- COPYRIGHT (c) 2005 N-able Technologies.  All Rights Reserved. --><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en" dir="ltr"><!-- COPYRIGHT (c) 2006 N-able Technologies.  All Rights Reserved. --><head>
 
 <title>N-able Technologies - Privacy Policy of N-able.com</title><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="content-language" content="en">
 <meta http-equiv="imagetoolbar" content="no">
 
-<meta name="copyright" content="Copyright 2005 N-able Technologies Inc. All rights reserved.">
+<meta name="copyright" content="Copyright 2006 N-able Technologies Inc. All rights reserved.">
 
 <meta name="keywords" content="n-able, technologies, privacy, policy, n-able.com, p3p"><meta name="description" content="A leading provider of service management software that manages information technology and security services from a business perspective. Our products deliver availability, performance reporting, security event and business service management.">
 <link rel="shortcut icon" href="/favicon.ico" type="image/ico">
@@ -19,8 +19,15 @@
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
-	_uacct = "UA-127289-1";
+<!--
+_uacct = "UA-127289-1";
 	urchinTracker();
+
+function MM_jumpMenu(targ,selObj,restore){ //v3.0
+  eval(targ+".location='"+selObj.options[selObj.selectedIndex].value+"'");
+  if (restore) selObj.selectedIndex=0;
+}
+//-->
 </script>
 
 
@@ -35,15 +42,24 @@
 	</div>
 	<div id="toplinks">
 		<a href="#begin" title="Skip Navigation" accesskey="s"><img src="/images/layout/clearpx.gif" alt=""></a>&nbsp;
-		
-			<a href="/about/contact_us.php" class="block">Contact Us</a> &nbsp;&nbsp; <form id="topsearch" method="post" action="/login/">
-			<label for="q" class="tl">Sign In:</label>
-			<input type="text" name="uname" id="uname" accesskey="r">
-			<input type="password" name="pwd" id="pwd">
-			<input type="submit" name="signin" id="signin" value="Sign In">
-			</form>
 
-			</div>
+			<a href="/" class="block">Home</a> &nbsp;&nbsp; <a href="/about/contact_us.php" class="block">Contact Us</a> &nbsp;&nbsp; <a href="/login/" class="block">Partner Login</a> &nbsp;&nbsp; <form id="topsearch" method="post" action="/">
+	    <select id="quicknav" name="quicknav" onchange="MM_jumpMenu('parent',this,0)">
+              <option>Quick Nav</option>
+              <option value="/msp/">Velocity System for MSP</option>
+              <option value="/esp/">Velocity System for ESP</option>
+              <option value="/telco/">Velocity System for Telco</option>
+              <option value="/oem/">Velocity System for OEM</option>
+              <option value="/about/">About N-able</option>
+              <option value="/news/">News &amp; Events</option>
+              <option value="/customers/">Customers</option>
+              <option value="/alliances/">Alliances</option>
+              <option value="/support/">Support</option>
+              <option value="/login/">Partner Login</option>
+            </select></form>
+
+
+	</div>
 </div>
 
 <!-- Navigation Bar -->
@@ -169,7 +185,7 @@
 <div id="foot">
 <div id="meeting"><a href="/meeting/" class="footer">Online Meeting</a></div>
 
-	Copyright © 2005 N-able Technologies Inc.  All Rights Reserved.  <a href="/" class="footer">N-able Home</a> | <a href="/legal/privacy.php" class="footer" accesskey="8">Privacy Policy</a> | <a href="/access/" class="footer" accesskey="0">Accessibility</a> | <a href="/access/map/" class="footer" accesskey="3">Site Map</a>
+	Copyright © 2006 N-able Technologies Inc.  All Rights Reserved.  <a href="/" class="footer">N-able Home</a> | <a href="/legal/privacy.php" class="footer" accesskey="8">Privacy Policy</a> | <a href="/access/" class="footer" accesskey="0">Accessibility</a> | <a href="/access/map/" class="footer" accesskey="3">Site Map</a>
 
 </div>
 </div>
