--- a/r/rb/rba/rba.gov.au.html
+++ b/r/rb/rba/rba.gov.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rba.gov.au privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214115758id_/http%3A//www.rba.gov.au/PrivacyStatement/index.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rba.gov.au privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615030343id_/http%3A//www.rba.gov.au/PrivacyStatement/index.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><!-- #BeginTemplate "/Templates/Standard.dwt" --><head>
 <!-- #BeginEditable "doctitle" --> 
@@ -79,29 +79,28 @@ function MM_swapImage() { //v3.0
 		<td width="120">
 		
 	     
-      <p class="navbar"><a href="/AboutTheRBA/" title="About the RBA" accesskey="A">About 
-        the RBA</a></p> 
+      <p class="navbar"><a href="/AboutTheRBA/" title="About the RBA">About the RBA</a></p> 
       <p class="whiteline"><img src="/_Images/white_thin_line.gif" width="120" height="1" class="navbar" title="Spacer"></p>	     
-      <p class="navbar"><a href="/Statistics" title="Statistics" accesskey="T">Statistics</a></p>		
+      <p class="navbar"><a href="/Statistics" title="Statistics" accesskey="I">Statistics</a></p>		
       <p class="navbar"><a href="/Speeches" title="Speeches" accesskey="S">Speeches</a></p>		
       <p class="navbar"><a href="/PublicationsAndResearch" title="Publications and Research" accesskey="P">Publications &amp; Research</a></p>
-      <p class="navbar"><a href="/MediaReleases" title="Media Releases" accesskey="R">Media 
+      <p class="navbar"><a href="/MediaReleases" title="Media Releases" accesskey="M">Media 
         Releases</a></p> 		
       <p class="whiteline"><img src="/_Images/white_thin_line.gif" width="120" height="1" class="navbar" title="Spacer"></p>
-      <p class="navbar"><a href="/MonetaryPolicy" title="Monetary Policy" accesskey="M">Monetary Policy</a></p>
-      <p class="navbar"><a href="/DomesticMarketOperations" title="Domestic Market Operations" accesskey="K">Domestic Market Operations</a></p>
-      <p class="navbar"><a href="/FinancialSystemStability" title="Financial System Stability" accesskey="F">Financial System Stability</a></p>
+      <p class="navbar"><a href="/MonetaryPolicy" title="Monetary Policy">Monetary Policy</a></p>
+      <p class="navbar"><a href="/DomesticMarketOperations" title="Domestic Market Operations">Domestic Market Operations</a></p>
+      <p class="navbar"><a href="/FinancialSystemStability" title="Financial System Stability">Financial System Stability</a></p>
 		
-	<p class="navbar"><a href="/PaymentsSystem" title="Payments System" accesskey="Y">Payments System</a></p>		
-	<p class="navbar"><a href="/FinancialServices" title="Financial Services" accesskey="I">Financial Services</a></p>		
-	<p class="navbar"><a href="/CurrencyNotes" title="Currency Notes" accesskey="N">Currency Notes</a></p>
+	<p class="navbar"><a href="/PaymentsSystem" title="Payments System">Payments System</a></p>		
+	<p class="navbar"><a href="/FinancialServices" title="Financial Services">Financial Services</a></p>		
+	<p class="navbar"><a href="/CurrencyNotes" title="Currency Notes">Currency Notes</a></p>
 	<p class="whiteline"><img src="/_Images/white_thin_line.gif" width="120" height="1" class="navbar" title="Spacer"></p>
 	<p class="navbar"><a href="/Museum/" target="_blank" title="Link, opening in a new window, to the Museum of Australian Currency Notes" accesskey="N">Museum</a></p>
         <p class="whiteline"><img src="/_Images/white_thin_line.gif" width="120" height="1" class="navbar" title="Spacer"></p>
-	<p class="navbar" title="Employment Opportunities"><a href="/EmploymentOpportunities" title="Employment Opportunities" accesskey="E">Employment 
+	<p class="navbar" title="Employment Opportunities"><a href="/EmploymentOpportunities" title="Employment Opportunities" accesskey="6">Employment 
        Opportunities</a></p>	     
       <p class="whiteline"><img src="/_Images/white_thin_line.gif" width="120" height="1" class="navbar" title="Spacer"></p>
-      <p class="navbar" title="Education"><a href="/Education" title="Education" accesskey="B">Education</a></p>
+      <p class="navbar" title="Education"><a href="/Education" title="Education">Education</a></p>
   
        </td>		
 	   <td width="20">&nbsp;</td>
@@ -115,10 +114,10 @@ function MM_swapImage() { //v3.0
 <a name="Breadcrumbs"></a><table width="100%" border="0" cellpadding="0" cellspacing="0" align="left" style="max-height:98px; height:98px;">
 	 <tbody><tr> 
 	   <td width="150" align="left" valign="top" nowrap="" colspan="2" bgcolor="#000066"><img src="/_images/topbar_home_text.gif" width="440" height="34" border="0" alt="Reserve Bank of Australia"></td>
-	   <td align="right" valign="bottom" bgcolor="#000066" nowrap=""><span class="top"><a href="http://search.rba.gov.au" title="Search" accesskey="4">Search</a>&nbsp;|&nbsp;<a href="/SiteMap/index.html" title="Site Map" accesskey="1">Site&nbsp;Map</a>&nbsp;|&nbsp;<a href="/Glossary/index.asp" title="Glossary of Terms and Abbreviations" accesskey="G">Glossary</a>&nbsp;|&nbsp;<a href="/Links/index.html" title="Links" accesskey="L">Links</a>&nbsp;|&nbsp;<a href="/FAQ/index.html" title="FAQ" accesskey="5">FAQ</a>&nbsp;|&nbsp;<a href="/Contact/index.html" title="Contact Us" accesskey="U">Contact Us</a></span>&nbsp;<a href="mailto:rbainfo@rba.gov.au" accesskey="7"></a><a href="/FAQ/website.html#keyboard" accesskey="9"></a><a href="/index.html" accesskey="2"></a><a href="/EventsDiary/index.html" accesskey="V"></a><a href="/FAQ/website.html" accesskey="H"></a></td>
+	   <td align="right" valign="bottom" bgcolor="#000066" nowrap=""><span class="top"><a href="http://search.rba.gov.au" title="Search" accesskey="4">Search</a>&nbsp;|&nbsp;<a href="/SiteMap/index.html" title="Site Map" accesskey="1">Site&nbsp;Map</a>&nbsp;|&nbsp;<a href="/Glossary/index.asp" title="Glossary of Terms and Abbreviations" accesskey="Y">Glossary</a>&nbsp;|&nbsp;<a href="/Links/index.html" title="Links" accesskey="L">Links</a>&nbsp;|&nbsp;<a href="/FAQ/index.html" title="FAQ" accesskey="5">FAQ</a>&nbsp;|&nbsp;<a href="/Contact/index.html" title="Contact Us" accesskey="U">Contact Us</a></span>&nbsp;<a href="mailto:rbainfo@rba.gov.au" accesskey="7"></a><a href="/index.html" accesskey="2"></a><a href="/EventsDiary/index.html" accesskey="N"></a><a href="/FAQ/index.html" title="FAQ" accesskey="8"></a></td>
 	 </tr>
 	 <tr> 
-	   <td height="23" bgcolor="#000066" nowrap=""><script language="JavaScript1.2" type="text/javascript">path_bar()</script><span class="top"><strong><font color="#ffffff"><a href="/">Home</a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../../../../../">web</a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../../../../">20051214115758id_</a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../../../">http%3A</a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../../"></a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../">www.rba.gov.au</a></font></strong></span><strong><font color="White">&nbsp;•&nbsp;</font></strong><span class="toporange"><strong>Privacy Statement</strong></span>&nbsp;</td>
+	   <td height="23" bgcolor="#000066" nowrap=""><script language="JavaScript1.2" type="text/javascript">path_bar()</script><span class="top"><strong><font color="#ffffff"><a href="/">Home</a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../../../../../">web</a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../../../../">20060615030343id_</a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../../../">http%3A</a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../../"></a></font></strong></span><span class="top"><strong><font color="White">&nbsp;•&nbsp;<a href="./../">www.rba.gov.au</a></font></strong></span><strong><font color="White">&nbsp;•&nbsp;</font></strong><span class="toporange"><strong>Privacy Statement</strong></span>&nbsp;</td>
 	   <td>&nbsp;</td>
 	 </tr>
 	 <tr> 
@@ -393,11 +392,11 @@ function MM_swapImage() { //v3.0
             <p><a href="#top"><img src="/_Images/return.gif" width="148" height="16" alt="Return to top" border="0" align="bottom"></a></p>
           </td>
           <td bgcolor="White" valign="bottom" width="82%" align="center" height="41"> 
-            <p class="navbar"><a href="/Copyright/index.html" accesskey="C">Copyright</a> | 
-              <a href="/Disclaimer/index.html" accesskey="D">Disclaimer</a> | <a href="/JudicialNotice/index.html" accesskey="J">Judicial 
-              Notice</a> | <a href="/PrivacyStatement/index.html" accesskey="6">Privacy Statement</a> 
-              | <a href="/ActionPlan/index.html" accesskey="O">Online Action Plan</a> | <a href="/Accessibility/index.html" accesskey="3">Accessibility</a></p>
-              <span class="smalltext">© Reserve Bank of Australia, 2001-2005. All rights reserved.</span> </td>
+            <p class="navbar"><a href="/Copyright/index.html">Copyright</a> | 
+              <a href="/Disclaimer/index.html" accesskey="D">Disclaimer</a> | <a href="/JudicialNotice/index.html">Judicial 
+              Notice</a> | <a href="/PrivacyStatement/index.html">Privacy Statement</a> 
+              | <a href="/ActionPlan/index.html">Online Action Plan</a> | <a href="/Accessibility/index.html" accesskey="3">Accessibility</a></p>
+              <span class="smalltext">© Reserve Bank of Australia, 2001-2006. All rights reserved.</span> </td>
           <td bgcolor="White" width="4%" height="41"> 
             <p>&nbsp;</p>
             <a href="#top"><img src="/_Images/RBALogo_grey.gif" width="17" height="15" alt="Return to top" border="0" align="top"></a>
