--- a/m/me/mer/mergentonline.com.html
+++ b/m/me/mer/mergentonline.com.html
@@ -1,14 +1,17 @@
-<!--The following is the downloaded HTML source of the mergentonline.com privacy policy that was archived on 2005-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051213204846id_/http%3A//www.mergentonline.com/noticesCM.asp%3Fcontentscode%3DPrivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mergentonline.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615030426id_/http%3A//www.mergentonline.com/noticesCM.asp%3Fcontentscode%3DPrivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 
-	<meta machinename="2K3MOL4">
+	<meta machinename="2K3MOL01">
 	<title>Mergent Online</title>
-	<link type="text/css" rel="stylesheet" href="header.css">
+	
+	<link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="http://23devtest01/rss.asp">
+	<link type="text/css" rel="stylesheet" href="header.css">	
 	<script type="text/javascript" language="javascript" src="scripts/global.js"></script>
-	<link type="text/css" rel="stylesheet" href="styles.css">
+	
+	<link type="text/css" rel="stylesheet" href="styles.css">	
 	<script type="text/javascript" language="javascript" src="scripts/dropbox.js"></script>
 <script type="text/javascript" language="javascript">
 
@@ -112,7 +115,6 @@ function onloadbody()
 	{
 		pc_init();
 	}
-	
 
 }
 
@@ -156,12 +158,14 @@ function addtocustomlist( szPage, varParams, varSourcePath )
 
 <div id="banner">
 	<div id="dateandtime">
-		<script language="JavaScript" type="text/javascript">var nDate= new Date(); document.write( nDate.toLocaleString() );</script>2/19/2020, 5:10:56 PM
+		<script language="JavaScript" type="text/javascript">var nDate= new Date(); document.write( nDate.toLocaleString() );</script>2/19/2020, 5:10:57 PM
 	</div>
 	<div id="bannermenu">	
 		<a href="JavaScript:EndUserAdminLink(false, undefined );" title="">Administration</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-		<a href="noticesCM.asp?contentscode=contact">Contact Us</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-		<a href="javascript:void window.open('Help/HelpIndex.htm','','resizable=yes,toolbar=no,top=100,left=100,scrollbars=yes,status=no,menubar=no,width=600,height=400');">Help</a>		
+			<a href="noticesCM.asp?contentscode=contact">Contact Us</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+			<a href="javascript:void window.open('Help/HelpIndex.htm','','resizable=yes,toolbar=no,top=100,left=100,scrollbars=yes,status=no,menubar=no,width=600,height=400');">Help</a>		
+			
+			
 	</div>
 	<div id="mergentlogo">
 		<a href="http://www.mergent.com" target="_blank"><img src="/images/Small_Logo.gif"></a>
