--- a/g/ge/gee/geekculture.com.html
+++ b/g/ge/gee/geekculture.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the geekculture.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231204751id_/http%3A//www.geekculture.com/culture/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the geekculture.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615030949id_/http%3A//geekculture.com/culture/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
