--- a/l/le/les/lessonplanspage.com.html
+++ b/l/le/les/lessonplanspage.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lessonplanspage.com privacy policy that was archived on 2005-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051211124420id_/http%3A//www.lessonplanspage.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lessonplanspage.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615030952id_/http%3A//lessonplanspage.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/LPPBorders.dwt" --><!-- DW6 --><head>
 <!-- #BeginEditable "doctitle" -->
@@ -34,11 +34,14 @@ if(document.all){document.write('<tr bgcolor=#9933CC><td id=ignore><center><p><f
 <tr><td><b><a class="wt" href="/edulinks.html">• Educational Links</a></b></td></tr>
 <tr><td><b><a class="wt" href="/ts1.8/index.php">• Tell-A-Friend</a></b></td></tr>
 <tr><td><b><a class="wt" href="http://websurvey.burstmedia.com/surveyid1/surveysite.asp?Qhcode=ad1328a&amp;Qhcat=437">• Take Our Survey!</a></b></td></tr>
+<!--tr><td><b><a class=wt href=/phpads/adclick.php?bannerid=407&zoneid=79&source=&dest=http://www.lessonplanspage.com/articles/EducationMasters.html>&#149; Education Masters</a></b></td></tr-->
 <tr bgcolor="#FFFF00"><td id="ignore" class="wt"><center><b><font color="#9933CC">Special Features:</font></b></center></td></tr>
-<tr><td><b><a class="wt" href="/news/sponsor.pl?banner=tomerit5art"><font color="#FF0000">•</font> Improve Writing</a></b></td></tr>
-<tr><td><b><a class="wt" href="/news/sponsor.pl?banner=toacereadart1"><font color="#00FF00">•</font> Efficient Reading</a></b></td></tr>
-<tr><td><b><a class="wt" href="/news/sponsor.pl?banner=totoshiba4"><font color="#660033">•</font> Toshiba &amp; Science</a></b></td></tr>
-<tr><td><b><a class="wt" href="/news/sponsor.pl?banner=toedjobs1"><font color="#00FFFF">•</font> Teaching Jobs</a></b></td></tr>
+<tr><td><b><a class="wt" href="/phpads/adclick.php?bannerid=399&amp;zoneid=79&amp;source=&amp;dest=http://www.lessonplanspage.com/articles/ImproveWriting.html"><font color="#FF0000">•</font> Improve Writing</a></b></td></tr>
+<tr><td><b><a class="wt" href="/phpads/adclick.php?bannerid=400&amp;zoneid=79&amp;source=&amp;dest=http://www.lessonplanspage.com/articles/AceReader.html"><font color="#00FF00">•</font> Efficient Reading</a></b></td></tr>
+<tr><td><b><a class="wt" href="/phpads/adclick.php?bannerid=394&amp;zoneid=79&amp;source=&amp;dest=http://www.lessonplanspage.com/articles/handwriting.html"><font color="#FFFF00">•</font> Handwriting Class</a></b></td></tr>
+<tr><td><b><a class="wt" href="/phpads/adclick.php?bannerid=416&amp;zoneid=79&amp;source=&amp;dest=http://www.LessonPlansPage.com/articles/HealthEducation.html"><font color="#FFCC99">•</font> Health Education</a></b></td></tr>
+<tr><td><b><a class="wt" href="/phpads/adclick.php?bannerid=418&amp;zoneid=79&amp;source=&amp;dest=http://www.lessonplanspage.com/articles/MATeaching.html"><font color="#FFCC99">•</font> MA Teaching - NBCT</a></b></td></tr>
+<tr><td><b><a class="wt" href="/phpads/adclick.php?bannerid=395&amp;zoneid=79&amp;source=&amp;dest=http://www.lessonplanspage.com/articles/EducationJobs.html"><font color="#00FFFF">•</font> Teaching Jobs</a></b></td></tr>
 <tr><td><b><a class="wt" href="/articles/EducatorMagazines.html"><font color="#669900">•</font> Teacher Magazines</a></b></td></tr>
 <tr><td><b><a class="wt" href="/articles/OldArticles.html">• Previous Articles</a></b></td></tr>
 <tr bgcolor="#9933CC"><td id="ignore" class="wt"><center><b>Site Information:</b></center></td></tr>
@@ -59,12 +62,12 @@ if(document.all){document.write('<tr bgcolor=#9933CC><td id=ignore><center><p><f
 <tr bgcolor="#9933CC"><td id="ignore" class="wt"><center><b>Search This Site:</b></center></td></tr>
 <form action="http://www.edhelpernet.com/cgi-bin/ednet.cgi" method="POST"></form><tr><td id="ignore"><center><input type="text" name="search" size="13" value="Your Topic" style="font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 7.5pt;" onfocus="this.value=''"><br><input type="submit" value="Search!" name="sbtn" class="bt"><input type="hidden" name="site" value="EdScope"><input type="hidden" name="mode" value="2"></center></td></tr>
 <tr bgcolor="#9933CC"><td id="ignore" class="wt"><center><b>Vote For Us:</b></center></td></tr>
-<tr><td><b><a class="wt" href="http://www.sitesforteachers.com/perl/rankem.pcgi?id=EdScope" target="_blank">@ SitesForTeachers</a></b></td></tr>
-<tr><td><b><a class="wt" href="http://teachers.teach-nology.com/cgi-bin/bestof/topsites.cgi?lessonplansp" target="_blank">@ Teach-nology</a></b></td></tr><tr><td id="ignore"><center><a class="wt" href="/news/sponsor.pl?banner=scranton"><img src="http://view.atdmt.com/BED/view/dscplus40040000004bed/direct/01/" width="120" height="60" border="0"></a></center></td></tr></tbody></table></td><td width="100%" valign="top"><h1></h1><table width="100%" border="1" cellspacing="0" cellpadding="0" bordercolor="9933CC" bgcolor="0000CC" onmouseover="changeto('#9933CC')" onmouseout="changeback('#0000CC')">
+<tr><td><b><a class="wt" href="http://www.sitesforteachers.com/cgi-bin/in.cgi?id=EdScope" target="_blank">@ SitesForTeachers</a></b></td></tr>
+<tr><td><b><a class="wt" href="http://teachers.teach-nology.com/cgi-bin/bestof/topsites.cgi?lessonplansp" target="_blank">@ Teach-nology</a></b></td></tr><!--tr><td id=ignore><center><a class=wt href=/news/sponsor.pl?banner=scranton><img src="http://view.atdmt.com/BED/view/dscplus40040000004bed/direct/01/" width=120 height=60 border=0></a></center></td></tr--></tbody></table></td><td width="100%" valign="top"><h1></h1><table width="100%" border="1" cellspacing="0" cellpadding="0" bordercolor="9933CC" bgcolor="0000CC" onmouseover="changeto('#9933CC')" onmouseout="changeback('#0000CC')">
 <tbody><tr><td width="478" colspan="7" style="border-width: 1px 1px 1px 0px;" id="ignore" class="ot"><center><img src="/spacer.gif" width="478" height="1"><br><img src="/Welcome.gif" width="370" height="28" alt="Welcome!"><br>
 <b><!-- #BeginEditable "top" -->We Value Your Privacy!<!-- #EndEditable --></b>
 </center></td>
-<td width="100%" rowspan="2" id="ignore" class="wt"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Visit Other</b><br>&nbsp;<a href="http://www.sitesforteachers.com/perl/rankem.pcgi?id=EdScope" target="_blank"><img src="/sft_logo_small.gif" width="88" height="31" border="0" alt="Click to Vote For Us!"></a></td></tr>
+<td width="100%" rowspan="2" id="ignore" class="wt"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Visit Other</b><br>&nbsp;<a href="http://www.sitesforteachers.com/cgi-bin/in.cgi?id=EdScope" target="_blank"><img src="/sft_logo_small.gif" width="88" height="31" border="0" alt="Click to Vote For Us!"></a></td></tr>
 <tr><td nowrap="" style="border-width: 1px 1px 1px 0px;"><center><a class="wt" href="/about.html"><b>About</b></a></center></td>
 <td nowrap=""><center><a class="wt" href="/sitesearch.html"><b>Search</b></a></center></td>
 <td nowrap=""><center><a class="wt" href="/forums"><b>Forums</b></a></center></td>
@@ -73,14 +76,18 @@ if(document.all){document.write('<tr bgcolor=#9933CC><td id=ignore><center><p><f
 <td nowrap=""><center><a class="wt" href="/Contact.html"><b>Contact</b></a></center></td>
 <td nowrap=""><center><a class="wt" href="/ts1.8/index.php"><b>Tell-A-Friend</b></a></center></td>
 </tr></tbody></table><table width="100%" border="0" cellspacing="0" cellpadding="2"><tbody><tr><td><!-- #BeginEditable "body" -->
+<!-- BEGIN RICH-MEDIA NETWORK CODE -->
 <script language="JavaScript">
-rnum=Math.round(Math.random() * 100000);
-document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ad1328a.cgi/v=2.0S/sz=468x60A|728x90A/'+rnum+'/RETURN-CODE/JS/"></scr'+'ipt>');
-</script><script src="http://www.burstnet.com/cgi-bin/ads/ad1328a.cgi/v=2.0S/sz=468x60A|728x90A/10209/RETURN-CODE/JS/"></script>
-<noscript><a href="http://www.burstnet.com/ads/ad1328a-map.cgi/ns/v=2.0S/sz=468x60A|728x90A/" target="_top">
-<img src="http://www.burstnet.com/cgi-bin/ads/ad1328a.cgi/ns/v=2.0S/sz=468x60A|728x90A/" border="0" alt="Click Here"></a>
-</noscript><script language="JavaScript" type="text/javascript" src="http://www.lessonplanspage.com/phpads/adpopup.php?n=ad38d3e4&amp;what=zone:61&amp;target=_blank&amp;popunder=1"></script>
-<div id="beacon_1" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.lessonplanspage.com/phpads/adlog.php?bannerid=1&amp;clientid=2&amp;zoneid=3&amp;source=&amp;block=0&amp;capping=0&amp;cb=97afae29b071bc2fe5d7dd9bef33b233" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div><table border="0" cellspacing="0" cellpadding="2"><tbody><tr><td width="475" valign="top"><img src="/spacer.gif" width="475" height="1" border="0"><br>
+rnum=Math.round(Math.random() * 100000); ts=String.fromCharCode(60);
+if (window.self != window.top) { nf='' } else { nf='NF/' };
+
+document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/ad1328a.cgi/v=2.1S/sz=468x60A|728x90A/'+rnum+'/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
+
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad1328a.cgi/v=2.1S/sz=468x60A|728x90A/83760/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/ad1328a-map.cgi/ns/v=2.1S/sz=468x60A|728x90A/" target="_top">
+<img src="http://www.burstnet.com/cgi-bin/ads/ad1328a.cgi/ns/v=2.1S/sz=468x60A|728x90A/" border="0" alt="Click Here"></a>
+</noscript>
+<!-- END BURST CODE --><script language="JavaScript" type="text/javascript" src="http://www.lessonplanspage.com/phpads/adpopup.php?n=ad38d3e4&amp;what=zone:61&amp;target=_blank&amp;popunder=1"></script>
+<div id="beacon_1" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://lessonplanspage.com/phpads/adlog.php?bannerid=1&amp;clientid=2&amp;zoneid=3&amp;source=&amp;block=0&amp;capping=0&amp;cb=c25342f1dcd4b4fc44935bc23e4099f6" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div><table border="0" cellspacing="0" cellpadding="2"><tbody><tr><td width="475" valign="top"><img src="/spacer.gif" width="475" height="1" border="0"><br>
 <p><b>PRIVACY POLICY SUMMARY:</b><br>
 The Lesson Plans Page respects your privacy and will not do anything in violation 
   of your privacy. No personally identifiable information is collected by LessonPlansPage.com.  You have the opportunity to subscribe your email address to our newsletter.  If you do, your email address will never be given to any third party. You're welcome to read the details of our privacy policy below: 
@@ -191,21 +198,25 @@ We use MaxOnline and other third-party advertising companies to serve ads when y
 <p><a href="http://www.maxonline.com/privacy_policy/index.php" target="_blank">http://www.maxonline.com/privacy_policy/index.php</a></p>
 <p>Third Party Cookies<br>
 In the course of serving advertisements to this site, our third-party advertiser may place or recognize a unique “cookie” on your browser.</p></td>
-<td width="100%" valign="top"><script language="JavaScript">
-rnum=Math.round(Math.random() * 100000);
-document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/sk1328a.cgi/v=2.0S/sz=120x600A|160x600A/'+rnum+'/RETURN-CODE/JS/"></scr'+'ipt>');
-</script><script src="http://www.burstnet.com/cgi-bin/ads/sk1328a.cgi/v=2.0S/sz=120x600A|160x600A/80492/RETURN-CODE/JS/"></script>
-<noscript><a href="http://www.burstnet.com/ads/sk1328a-map.cgi/ns/v=2.0S/sz=120x600A|160x600A/" target="_top">
-<img src="http://www.burstnet.com/cgi-bin/ads/sk1328a.cgi/ns/v=2.0S/sz=120x600A|160x600A/" border="0" alt="Click Here"></a>
-</noscript><div id="beacon_3" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.lessonplanspage.com/phpads/adlog.php?bannerid=3&amp;clientid=6&amp;zoneid=26&amp;source=&amp;block=0&amp;capping=0&amp;cb=e491e66fbb79edda1bd241c2818e97de" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div></td>
+<td width="100%" valign="top"><!-- BEGIN RICH-MEDIA NETWORK CODE -->
+<script language="JavaScript">
+rnum=Math.round(Math.random() * 100000); ts=String.fromCharCode(60);
+if (window.self != window.top) { nf='' } else { nf='NF/' };
+document.write(ts+'script src="http://www.burstnet.com/cgi-bin/ads/sk1328a.cgi/v=2.1S/sz=120x600A|160x600A/'+rnum+'/'+nf+'RETURN-CODE/JS/">'+ts+'/script>');
+</script><script src="http://www.burstnet.com/cgi-bin/ads/sk1328a.cgi/v=2.1S/sz=120x600A|160x600A/14043/NF/RETURN-CODE/JS/"></script><noscript><a href="http://www.burstnet.com/ads/sk1328a-map.cgi/ns/v=2.1S/sz=120x600A|160x600A/" target="_top">
+<img src="http://www.burstnet.com/cgi-bin/ads/sk1328a.cgi/ns/v=2.1S/sz=120x600A|160x600A/" border="0" alt="Click Here"></a>
+</noscript>
+<!-- END BURST CODE -->
+<div id="beacon_3" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://lessonplanspage.com/phpads/adlog.php?bannerid=3&amp;clientid=6&amp;zoneid=26&amp;source=&amp;block=0&amp;capping=0&amp;cb=2ab031e3200670e11fa775fe5ec47959" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div></td>
 </tr></tbody></table>
 <!-- #EndEditable --></td></tr></tbody></table><table border="0" cellspacing="0" cellpadding="2" width="100%"><tbody><tr>
 <td><img src="/spacer.gif" width="478" height="1"><br><script type="text/javascript"><!--
 google_ad_client = "pub-5197455941898387";
-google_alternate_ad_url = "http://www.lessonplanspage.com/ads/default.htm";
+google_alternate_ad_url = "http://www.lessonplanspage.com/cubads/box.html";
 google_ad_width = 300;
 google_ad_height = 250;
 google_ad_format = "300x250_as";
+google_ad_type = "text";
 google_ad_channel ="8927074605";
 google_color_border = "336699";
 google_color_bg = "FFFFFF";
@@ -219,7 +230,7 @@ google_color_text = "000000";
 <td width="100%"><table cellpadding="2" border="0" bgcolor="#0000CC"><tbody><tr><td bgcolor="#9933CC" width="150" class="ot"><center><b>Like our site?<br><a href="/ts1.8/index.php" class="ot">Tell a friend!</a></b></center></td></tr>
 <tr><td width="150" class="wt"><font color="#FFFFFF"><b>Why not fill out a simple form to <a href="/ts1.8/index.php" class="wt"><u>Tell-A-Friend by e-mail</u></a> about the page you're currently reading? It's simple! Just <a href="/ts1.8/index.php" class="wt"><u>click here</u></a>!</b></font></td></tr>
 <tr><td align="center" width="150"><a href="http://www.lessonplanspage.com/ts1.8/index.php"><img src="/go.gif" border="0"></a></td></tr></tbody></table></td></tr></tbody></table></td></tr>
-<tr bgcolor="#0000CC"><td width="120" style="border-width: 0px 2px 2px 2px; border-style: solid; border-color: #9933CC;" class="wt"><center><b>Visit Other</b><br><a href="http://www.sitesforteachers.com/perl/rankem.pcgi?id=EdScope" target="_blank"><img src="/sft_logo_small.gif" width="88" height="31" border="0" alt="Click to Vote For Us!"></a></center></td>
+<tr bgcolor="#0000CC"><td width="120" style="border-width: 0px 2px 2px 2px; border-style: solid; border-color: #9933CC;" class="wt"><center><b>Visit Other</b><br><a href="http://www.sitesforteachers.com/cgi-bin/in.cgi?id=EdScope" target="_blank"><img src="/sft_logo_small.gif" width="88" height="31" border="0" alt="Click to Vote For Us!"></a></center></td>
 <td width="100%"><table cellpadding="0" cellspacing="0" border="1" bordercolor="#9933CC" width="100%" style="border-width: 1px;" onmouseover="changeto('#9933CC')" onmouseout="changeback('#0000CC')">
 <tbody><tr><td nowrap="" style="border-width: 1px 1px 1px 0px;"><center><a class="wt" href="/about.html"><b>About</b></a></center></td>
 <td nowrap=""><center><a class="wt" href="/sitesearch.html"><b>Search</b></a></center></td>
@@ -230,8 +241,8 @@ google_color_text = "000000";
 <td nowrap=""><center><a class="wt" href="/ts1.8/index.php"><b>Tell-A-Friend</b></a></center></td>
 <td rowspan="2" width="100%" id="ignore"><table width="100%"><tbody><tr><td width="100%" nowrap="" id="ignore"><a href="http://teachers.teach-nology.com/cgi-bin/bestof/topsites.cgi?lessonplansp" target="_blank"><img src="/bestteach.gif" width="100" height="41" border="0" alt="Click to Vote For LessonPlansPage.com!"></a></td></tr></tbody></table></td></tr>
 <tr><td colspan="7" style="border-width: 1px 1px 1px 0px;" id="ignore"><p class="ot"><font color="#FFFFFF"><img src="/spacer.gif" width="478" height="1"><br>
-<b>© 1996-2005 <a href="http://www.EdScope.com" class="ot">EdScope, L.L.C.</a> All Rights Reserved.<br>
-Last Major Update: <!-- #BeginDate format:Am1 -->December 9, 2005<!-- #EndDate -->.<br>
+<b>© 1996-2006 <a href="http://www.EdScope.com" class="ot">EdScope, L.L.C.</a> All Rights Reserved.<br>
+Last Major Update: <!-- #BeginDate format:Am1 -->May 12, 2006<!-- #EndDate -->.<br>
 We value your privacy.  Please read our <a href="/privacy.htm" class="ot">Privacy Statement</a>.<br>
 E-Mail <a href="mailto:Webmaster@LessonPlansPage.com" class="ot">Webmaster@LessonPlansPage.com</a>.</b></font></p></td></tr></tbody></table></td></tr></tbody></table>
 <script language="JavaScript" src="/fc.js"></script>
